# mlprep

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  audit.toml  pyproject.toml
.github/workflows/: audit.yml  ci.yml  release.yml
debug_repro/allowed/: pipeline.yaml
docs/: BENCHMARK.md  PLAN.md  PROMPT.md  SPEC.md
docs/wiki/: Home.md  cli-reference.md  contributing.md  examples.md  feature-engineering.md  getting-started.md  installation.md  migration-guide.md  performance.md  pipeline-reference.md  quick-start.md  troubleshooting.md  validation.md
examples/01_basic_etl/: README.md  data.csv  generate_data.py  lineage.json  pipeline.yaml
examples/02_data_validation/: README.md  dirty_data.csv  generate_dirty_data.py  pipeline.yaml
examples/03_feature_engineering/: README.md  generate_train_test.py  pipeline_test.yaml  pipeline_train.yaml  test_data.csv  train_data.csv
examples/04_scikit_learn_integration/: README.md  pipeline.yaml  raw_data.csv  train_model.py
examples/05_mlflow_experiment/: README.md  mlflow.db  mlflow_run.py  pipeline.yaml  raw_data.csv
examples/06_airflow_dag/: README.md  mlprep_dag.py
examples/07_dvc_pipeline/: README.md  dvc.yaml  pipeline.yaml  raw_data.csv
python/mlprep/: __init__.py  __main__.py  cli.py
python/tests/: __init__.py  test_benchmark.py  test_cli.py  test_io.py
scripts/: benchmark.py
src/: compute.rs  dsl.rs  engine.rs  errors.rs  features.rs  io.rs  lib.rs  main.rs  observability.rs  runner.rs  security.rs  validate.rs
tests/: bad_syntax.yaml  cli_test.rs  dsl_integration.rs  examples_pr11.rs  missing_file.yaml  performance_integration.rs  security_e2e.rs  transforms_integration.rs
